--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
-    "name": "NavigationProject",
+    "name": "Food Catalog",
+    "description": "Categorizes foods",
     "slug": "NavigationProject",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -18,9 +19,11 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "buildNumber": "0.0.1"
     },
     "android": {
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
