Added expo configuration for publishing

--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "Food Catalog",
+    "name": "Food Categories",
     "description": "Categorizes foods",
-    "slug": "NavigationProject",
+    "slug": "Food Categories",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -27,10 +27,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.inhinito.food_categories"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "2441344c-1a37-4743-8294-7e185e7d3ca3"
+      }
     }
   }
 }
